# wolfcraig

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  machine_setup_wolfcraig.py  plan.md  pyproject.toml  server_setup.py
.github/workflows/: quality.yml
caddy/: Caddyfile
caddy/sites/: amyl.org.uk  securitysaysyes.com
config/: domains.json  domains.schema.json
exim/templates/: 00_local_settings.tpl  200_send_outbound.tpl  30_smtp_outbound.tpl
lib/: constants.py  dns_check.py  gcp_dns.py  host_info.py
scripts/: deploy_certs.py  generate_dkim.py  run_tests.sh
systemd/: caddy-cert-deploy.service  caddy-cert-deploy.timer
tests/: test_deploy_certs.py  test_dns_check.py  test_gcp_dns.py  test_generate_dkim.py
tests/fixtures/: domains.json
